--- a/pom.xml
+++ b/pom.xml
@@ -127,5 +127,12 @@
       </plugin>
     </plugins>
   </reporting>
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Apache Maven Packages</name>
+      <url>https://maven.pkg.github.com/CS1632/supplementary-exercise-4-ci-cd-pipelines-wonsunahn</url>
+    </repository>
+  </distributionManagement>
 
 </project>
