--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,40 @@
+Skip to content
+Search or jump to…
+Pull requests
+Issues
+Codespaces
+Marketplace
+Explore
+ 
+@isb25 
+CS1632
+/
+supplementary-exercise-4-ci-cd-pipelines-jonprice99
+Public
+generated from wonsunahn/CS1632_CICD_JUnit
+Code
+Issues
+Pull requests
+Actions
+Projects
+Security
+Insights
+supplementary-exercise-4-ci-cd-pipelines-jonprice99/pom.xml
+@jonprice99
+jonprice99 Update pom.xml
+…
+Latest commit 95ed838 23 days ago
+ History
+ 3 contributors
+@jonprice99@dependabot@github-classroom
+139 lines (124 sloc)  4.25 KB
+
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>io.github.wonsunahn</groupId>
-  <artifactId>cs1632-cicd-junit</artifactId>
+  <artifactId>cs1632-cicd-junit-jop135</artifactId>
   <version>1.0</version>
   <packaging>jar</packaging>
 
@@ -127,6 +158,7 @@
       </plugin>
     </plugins>
   </reporting>
+  
   <distributionManagement>
     <repository>
       <id>github</id>
@@ -136,3 +168,4 @@
   </distributionManagement>
 
 </project>
+supplementary-exercise-4-ci-cd-pipelines-jonprice99/pom.xml at main · CS1632/supplementary-exercise-4-ci-cd-pipelines-jonprice99
